# dmft

./: .gitignore  CODE_DOCUMENTATION.md  TWO_GHOST_RESIDUAL_DIAGNOSTICS.md  dimer_ghost_dmft_doped.py  dmft_two_ghost_master_map_and_miniproject.md  ghost_cluster_standalone.py  ghost_dmft_bond_opt-copy.py  ghost_dmft_bond_opt_ORIGINAL_gpu.py  pyproject.toml  two_ghost_dmft_full_picture_workbook.md
BHFM2/: README.md  check_setup.py  ed_fast.py  ed_sparse.py  ghost_dmft_bond.py  plot_fermi_arcs.py  run_M2_doping.py  run_M2_sweep.py  sigma_k.py  solve_min.py
docs/: README.md  gpu_feasibility_report.md
jobs/: BHFM2_SCC_INSTRUCTIONS.md  GPU_CLUSTER_README.md  README.md  RUN_BOND_INSTRUCTIONS.md  bhfm2_internal_m2_doping.sh  bhfm2_internal_m2_sweep.sh  bhfm2_m2_doping.sh  bhfm2_m2_sweep.sh  bond_m1_internal.sh  bond_m1_prof_new.sh  bond_m1_prof_orig.sh  bond_m1_prof_patched.sh  bond_m2_internal.sh  bond_m2_internal_gpu.sh  bond_m2_prof_orig.sh  bond_m2_prof_orig_gpu.sh  bond_m2_prof_patched.sh  bond_m2_prof_patched_gpu.sh  dimer_study_m1.sh  dimer_study_m1_internal.sh  dimer_study_m2.sh  dimer_study_m2_internal.sh  ghost_dmft_bond_m1.sh  ghost_dmft_bond_m2.sh  ghost_dmft_bond_m2_fix.sh  ghost_dmft_bond_m2_mine.sh  ghost_dmft_bond_m2_orig.sh  nested_cluster_m1.sh  nested_cluster_m1_gpu.sh  nested_cluster_m1_prof.sh  nested_cluster_m2.sh  nested_cluster_m2_gpu.sh  nested_cluster_m2_lowT_gpu.sh  phase_scan_m1_baseline.sh  phase_scan_m2_quality.sh
notebooks/: milestone0_quadratic_pipeline.ipynb  milestone1_ipt_bethe.ipynb  milestone2_ed_comparison.ipynb  (+1 more)
tests/: test_ed.py  (+13 more)
(+147 files in other folders)
